--- a/style.css
+++ b/style.css
@@ -30,9 +30,10 @@ h2 {
 }
 
 #blackJack {
+    position: relative;
+    display: block;
 	width: 800px;
 	margin: 20px auto;
-	position: relative;
 }
 
 #table {
@@ -71,11 +72,12 @@ h2 {
 
 #message {
 	display: none;
-	z-index: 9999;
-	position: absolute;
-	top: 300px;
-	width: 100%;
-	padding: 50px 100px;
+	z-index: 1;
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+	padding: 50px 150px;
 	background-color: rgba(255, 255, 255, 0.95);
 	font-size: 3em;
 	font-weight: bold;
